# canary-notebook

./: .gitignore  COPYRIGHT  README.md  pyproject.toml
sample_notebooks/: exceptions.ipynb  latex-example.ipynb  sample_notebook.ipynb  sanitize_defaults.yaml  test_coalesce.ipynb
src/canary_notebook/: __init__.py  kernel.py  plugin.py
